# technitium-api-proxy

./: .gitignore  Dockerfile  LICENSE.md  README.md  config.example.yml  docker-compose.e2e.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  e2e.yml  publish-dockerhub.yml  publish-quay.yml  release-binaries.yml
proxy/: auth.py  config.py  logger.py  main.py  policy.py
src/: technitium_api_proxy.py
tests/: conftest.py  test_auth.py  test_config.py  test_integration.py  test_policy.py
tests/e2e/: conftest.py  helpers.py  test_crud_and_dns.py  test_policy_rules.py  test_readonly.py  test_tier_access.py  test_token_auth.py  test_zone_access.py
